# kvcache-bench

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  README.md  RESULTS.md
docs/guides/: WORKFLOW.md
docs/reference/: CODEBASE-MAP.md
kvcache_bench/: __init__.py  bench.py  charts.py  cli.py  gpu.py  ollama.py
