[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kvcache-bench"
version = "0.1.0"
description = "Benchmark every KV cache compression method on your GPU. One command, real numbers."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [{name = "back2matching"}]
keywords = ["llm", "kv-cache", "benchmark", "vram", "gpu", "ollama", "llama-cpp", "quantization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["requests>=2.28.0", "pynvml>=11.5.0"]

[project.optional-dependencies]
charts = ["matplotlib"]
hf = ["torch", "transformers"]

[project.urls]
Homepage = "https://github.com/back2matching/kvcache-bench"

[project.scripts]
kvcache-bench = "kvcache_bench.cli:main"

[tool.setuptools.packages.find]
include = ["kvcache_bench*"]
